# cpp-project-template-min

./: .clangd  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md  conanfile.py  local_options.cmake.example  vcpkg.json
.codebase-memory/: artifact.json  graph.db.zst
.run/: app.run.xml  unit_tests.run.xml
cmake/: format.cmake
examples/: CMakeLists.txt  hello.cpp
src/: main.cpp  math.cpp  math.hpp
src/hello/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_math.cpp  test_simple.cpp
